# computer-vision-dscuwa

./: .gitignore  2_CNNs.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
