[project]
name = "computer-vision-dscuwa"
classifiers = ["Private :: Do Not Upload"]
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
    "ipykernel~=6.30.1",
    "matplotlib~=3.10.5",
    "nbformat>=4.2.0",
    "opencv-python~=4.12.0.88",
    "pandas~=2.3.2",
    "pip-tools~=7.5.0",
    "plotly~=6.2.0",
    "scikit-image~=0.25.2",
    "shap~=0.48.0",
    "torch~=2.8.0",
    "torchvision~=0.23.0",
]
